--- a/src/view/FrmLogin.form
+++ b/src/view/FrmLogin.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Login"/>
   </Properties>
   <SyntheticProperties>
@@ -30,11 +30,9 @@
                   <Component id="jTxtUsuario" alignment="0" min="-2" pref="135" max="-2" attributes="0"/>
                   <Component id="jLabelSenha" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabelUsuario" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                      <Component id="jBtnLogin" alignment="0" max="32767" attributes="0"/>
-                      <Component id="jPasswordSenha" alignment="0" pref="135" max="32767" attributes="0"/>
-                  </Group>
-                  <Component id="jBtnCriar" alignment="1" min="-2" pref="135" max="-2" attributes="0"/>
+                  <Component id="jPasswordSenha" alignment="0" min="-2" pref="135" max="-2" attributes="0"/>
+                  <Component id="jBtnCriar" alignment="0" min="-2" pref="135" max="-2" attributes="0"/>
+                  <Component id="jBtnLogin" min="-2" pref="135" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="131" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -65,9 +63,9 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace pref="12" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabelCadastre" min="-2" pref="32" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace pref="46" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="jLabelUsuario" min="-2" max="-2" attributes="0"/>
@@ -96,18 +94,18 @@
               <Component id="jLabelCSenha" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
                       <Component id="jPasswordCSenha" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                       <Component id="jBtnCadastre" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
                       <Component id="jBtnLogin" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jBtnCriar" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
           </Group>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
