--- a/src/view/FrmManterComodo.form
+++ b/src/view/FrmManterComodo.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Quartos"/>
+    <Property name="title" type="java.lang.String" value="C&#xf4;modos"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -156,7 +156,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabelQuarto">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Quarto :"/>
+        <Property name="text" type="java.lang.String" value="Comodo:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabelAndar">
